@@ -737,6 +737,10 @@ static inline const char *rcsid(const char *p) { \
 #define Makedev(x,y)   makedev((x),(y))
 #endif
 
+#if defined(HAVE_PTHREAD_H) && !defined(__LCLINT__)
+#include <pthread.h>
+#endif
+
 /**
  * Mark --initdb and --verifydb for destruction.
  */
